--- a/src/components/header/headerStyle.css
+++ b/src/components/header/headerStyle.css
@@ -1,11 +1,75 @@
+@font-face {
+  font-family: 'Geometria';
+  src: url('/src/assets/fonts/Geometria-Light.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .header {
-    background-color: #FFFFFF;
-    width: 100%;
-    height: 15vh;
+  background-color: #FFFFFF;
+  width: 100%;
+  padding: 10px 0;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .logo {
-    margin: 1% 0% 1% 7%;
-    height: 80%;
-    
+  height: 75%;
+  max-width: 180px; /* Ограничение максимальной ширины логотипа */
+}
+
+.header_menu {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+}
+
+.menu-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-family: 'Geometria', sans-serif;
+}
+
+.menu-list li {
+  margin: 10px 15px;
+  white-space: nowrap;
+}
+
+.menu-list a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 105%;
+}
+
+.menu-list a:hover {
+  font-weight: bold;
+}
+
+.menu-list a:active,
+.menu-list a.active {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+
+@media (max-width: 768px) {
+  .menu-list {
+    flex-direction: column; /* Переключение на столбцы на меньших экранах */
+    align-items: center;
+  }
+
+  .menu-list li {
+    margin: 5px 0;
+  }
 }
